<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"  >

    <TextView
        android:text="@string/edit_item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvItemFrag"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEditTextFrag"
        android:textSize="18sp"
        android:hint="@string/edit_item"
        android:layout_below="@+id/tvEditItemFrag"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:text="@string/select_priority_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textViewFrag"
        android:textSize="18sp"
        android:layout_marginTop="15dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewFrag"
        android:layout_toEndOf="@+id/textViewFrag"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="80dp"
        android:id="@+id/spEditPriorityFrag"
        android:layout_marginTop="15dp" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaveFrag"
        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />



</LinearLayout>