<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.handigarde.todoapp.EditItemActivity">

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btnSave"
        android:onClick="onSave"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEditText"
        android:textSize="18sp"
        android:hint="@string/edit_item"
        android:layout_below="@+id/tvEditItem"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp" />

    <TextView
        android:text="@string/edit_item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEditItem"
        android:textSize="30sp"
        android:layout_alignParentTop="true" />
</RelativeLayout>
