<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.handigarde.todoapp.MainActivity">

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="onAddItem"
        android:id="@+id/btnAddItem" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etEditText"
        android:hint="@string/add_item"
        android:layout_toStartOf="@+id/btnAddItem" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbToDoItems"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:id="@+id/rgRadioGroup">

        <RadioButton
            android:text="@string/to_do_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbToDoItems"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:text="@string/completed_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbCompletedItems"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:id="@+id/lvItems"
        android:layout_below="@+id/rgRadioGroup"
        android:layout_above="@+id/etEditText" />


</RelativeLayout>
